# medi-bot

./: .env  .env.sample  Cargo.toml  Dockerfile  Procfile  README.md  compose.yml
.github/workflows/: docker-image.yml
src/: add_medication.rs  commands.rs  err_handling.rs  frequency.rs  lib.rs  main.rs  medication.rs  patient.rs  take_medicine.rs  user.rs
src/flows/: add_medication.rs  add_patient.rs  mod.rs  patients.rs  share_patient.rs  take_medicine.rs
