[package]
name = "medibot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
uuid = "1.11.0"
redis = "0.27.5"
serde_json = "1.0.132"
serde = "1.0.214"
redis-macros = "0.4.2"
